Fix reloading C plugins.

GTypeModule expects all the types to be registered during the
g_type_module_use() call. It implies doing the registration within the
_load() virtual method, but we did it at a later stage.

The warnings (and actual reloading) are fixed by moving the type
registration process within the _load() virtual function.

https://bugzilla.gnome.org/show_bug.cgi?id=621233